@@ -1,5 +1,10 @@
 2020-05-23  Tom Tromey  <tom@tromey.com>
 
+	* dwarf2/read.c (dwarf2_attr): Use die_info::ref.
+	* dwarf2/die.h (struct die_info) <ref>: New member.
+
+2020-05-23  Tom Tromey  <tom@tromey.com>
+
 	* NEWS: Add entry for completion styling.
 	* completer.c (_rl_completion_prefix_display_length): Move
 	declaration earlier.
